[package]
name = "rsutils"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = { version = "1.0" }

chrono = { version = "0.4", optional = true }

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
json_comments = { version = "0.2", optional = true }
structopt = { version = "0.3", default-features = false, optional = true }

[features]
json-merge = ["serde_json"]
config = ["serde", "serde_json", "json_comments", "structopt", "json-merge"]
datetime = ["chrono"]
